# Teste

./: 404.html  aee.md  backwardfrom.md  casoDeUso.md  cenário.md  erika.md  espec.md  forward.md  historias.md  index.html  isa.md  mkdocs.yml  nada.md  nfr.md  pyproject.toml  testin.md
.github/workflows/: static.yml
docs/: index.md  teste.md
documentacao/site/: index.html
teste/: index.html
