[tool.poetry]
name = "teste"
version = "0.1.0"
description = ""
authors = ["Pedro Augusto Dourado Izarias <pedroaugustoizarias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-dracula-theme = "^1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
